# crystal_torture

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  DOPED.vasp  LICENSE  POSCAR.vasp  POSCAR_full.vasp  POSCAR_temp.vasp  README.md  README.rst  README.txt  check_doping.py  check_run.py  debug_ctypes.py  debug_meson_build.py  meson.build  paper.bib  paper.md  pyproject.toml  readthedocs.yml  requirements.txt  requirements_docs.txt  setup.py  temp  test.py  test_real_results.py
.github/workflows/: build.yml  upload_release.yml
crystal_torture/: .__init__.py.swp  .site.py.swp  __init__.py  build_tort.sh  cluster.py  dist.f90  dist.py  exceptions.py  f90wrap_tort.f90  graph.py  minimal_cluster.py  node.py  pymatgen_doping.py  pymatgen_interface.bu  pymatgen_interface.bu2  pymatgen_interface.bu3  pymatgen_interface.py  pymatgen_interface_new.py  site.py  tort.f90  tort.py  tort_c_interface.f90  tort_mod.mod  version.py
crystal_torture/tests/: .test_site.py.swp  POSCAR  POSCAR_13000.vasp  POSCAR_1_cluster.vasp  POSCAR_1_cluster_mix.vasp  POSCAR_2_cluster.vasp  POSCAR_SC.vasp  test_cluster.py  test_graph.py  test_node.py  test_pymatgen_interface.py  test_site.py
crystal_torture/tests/STRUCTURE_FILES/: POSCAR_CUT.vasp  POSCAR_CUT.xyz  POSCAR_FORT_MODULO_CHECK.vasp  POSCAR_SPINEL.vasp  POSCAR_SPINEL_SPLIT.vasp
crystal_torture/tests/STRUCTURE_FILES/TEMP/: POSCAR_1_graph.vasp  POSCAR_27000.vasp
docs/: Makefile  index.html  index.md  py-modindex.html  pymatgen_interface.html  requirements.txt  search.html
docs/source/: conf.py  index.md  index.rst  installation.md  modules.rst  quickstart.md
docs/source/docs/: node.rst
docs/source/mod/: cluster.rst  graph.rst  minimal_cluster.rst  node.rst  pymatgen_doping.rst
examples/: CLUS_0.vasp  CLUS_1.vasp  CLUS_10.vasp  CLUS_11.vasp  CLUS_12.vasp  CLUS_2.vasp  CLUS_3.vasp  CLUS_4.vasp  CLUS_5.vasp  CLUS_6.vasp  CLUS_7.vasp  CLUS_8.vasp  CLUS_9.vasp  POSCAR_full.vasp  crystal_torture_examples.ipynb
examples/.ipynb_checkpoints/: crystal-checkpoint.ipynb  crystal_torture_examples-checkpoint.ipynb
paper/: paper.bib  paper.md
paper/Images/: Untitled.ipynb
tests/: test_cluster.py  test_dist.py  test_dist_module_fix.py  test_doping_module_edge_cases.py  test_error_conditions.py  test_exceptions.py  test_extension_modules.py  test_fortran_integration.py  test_graph.py  test_graph_helpers.py  test_import_warnings.py  test_interface_helpers.py  test_meson_build.py  test_migration.py  test_minimal_cluster.py  test_node.py  test_node_edge_cases.py  test_phase2_fortran.py  test_phase3_cleanup.py  test_pymatgen_doping.py  test_pymatgen_dopinng.py  test_pymatgen_interface.py  test_tort.py
tests/STRUCTURE_FILES/: CLUS_0.cif  CLUS_0.vasp  CLUS_1.vasp  CLUS_2.vasp  CLUS_3.vasp  POSCAR_2_clusters.vasp  POSCAR_CLUS_1.cif  POSCAR_SPINEL.vasp  POSCAR_SPINEL_SPLIT.xyz  POSCAR_UC.vasp  POSCAR_periodic_1.vasp  POSCAR_periodic_2.vasp  POSCAR_periodic_3.vasp  POS_CLUS_0.vasp  pos
tests/STRUCTURE_FILES/PERC/: POSCAR_0.195.vasp  POSCAR_0.482.vasp  POSCAR_0.727.vasp  temp
