[build-system]
requires = [
    "meson-python>=0.12.0",
    "numpy>=1.19.0",
    "wheel",
]
build-backend = "mesonpy"

[project]
name = "crystal-torture"
version = "1.2.0"  # Updated to match meson.build
description = "A Crystal Tortuosity Module"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Conn O'Rourke", email = "conn.orourke@gmail.com"}
]
keywords = ["crystallography", "materials science", "tortuosity", "percolation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.19.0",
    "pymatgen>=2022.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "coverage",
    "ddt",
    "meson",
    "ninja",
]

[project.urls]
Homepage = "https://github.com/connorourke/crystal_torture"
Repository = "https://github.com/connorourke/crystal_torture"
Documentation = "https://github.com/connorourke/crystal_torture"
"Bug Tracker" = "https://github.com/connorourke/crystal_torture/issues"

# Meson-python specific configuration
[tool.meson-python.args]
# setup = ['--wipe']  # Clean build directory on setup
